Refactor navigation bar for front page and authenticated pages
- Removed extra padding from dropdown menus
- Added content for 'Current Tasks' popover on public pages
- Initialised top navigation bar on manifests page
- Renamed the IDs for the navigation divs

--- a/src/apps/copo_core/templates/copo/nav_authenticated.html
+++ b/src/apps/copo_core/templates/copo/nav_authenticated.html
@@ -1,6 +1,6 @@
 {% load web_tags %}
 {% load static %}
-<nav id="copoGlobalNav" class="navbar navbar-default {% if banner %}has-margin-top-neg-12{% endif %}" role="navigation">
+<nav id="authNavbar" class="navbar navbar-default {% if banner %}has-margin-top-neg-12{% endif %}" role="navigation">
     <div class="container-fluid {% if banner %}display-flex{% else %}display-block{% endif %}">
         <div class="navbar-header">
             <a class="navbar-brand" href="{% if user.is_authenticated %} {% url 'copo_profile_index:index' %} {% else %}/{% endif %}">
