--- a/src/apps/copo_landing_page/templates/nav_public.html
+++ b/src/apps/copo_landing_page/templates/nav_public.html
@@ -1,6 +1,6 @@
 {% load web_tags %}
 {% load static %}
-<nav id="frontpageNav" class="navbar navbar-default navbar-fixed-left {% if banner %}has-margin-top-neg-12{% endif %}" role="navigation">
+<nav id="publicNavbar" class="navbar navbar-default navbar-fixed-left {% if banner %}has-margin-top-neg-12{% endif %}" role="navigation">
     <div class="container-fluid {% if banner %}display-flex{% else %}display-block{% endif %}">
         <div class="navbar-header">
             <a class="navbar-brand"
