Prevent tour step from overlaying cookies modal
- Removed automatic tour call after email address is successfully entered
- Made other slight changes

--- a/static/copo/tour/css/tour.css
+++ b/static/copo/tour/css/tour.css
@@ -109,6 +109,10 @@
   margin: 10px 0 10px 0;
 }
 
+.shepherd-text li {
+  margin-bottom: 5px;
+}
+
 .shepherd-note {
   padding-top: 10px;
 }
@@ -121,6 +125,7 @@
   margin-right: 5px;
 }
 
+.shepherd-text a,
 .shepherd-note a {
   text-decoration: underline;
 }
